--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,24 @@
+# Disable strict cheking for NeCTAR, zones including: melbourne-qh2 (115.146.84.0/22) | melbourne-qh2-uom (45.113.232.0/22)
 Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233.* 45.113.234.* 45.113.235.*
     HashKnownHosts no
     StrictHostKeyChecking no
-    TCPKeepAlive yes
     UserKnownHostsFile /dev/null
-    PasswordAuthentication no
     CheckHostIP no
+
+# Use gitlab specific key
+Host gitlab.com
+    IdentityFile ~/.credentials/gitlab.key
+    TCPKeepAlive no
+
+# Use github specific key
+Host github.com
+    IdentityFile ~/.credentials/github.key
+    TCPKeepAlive no
+
+# For all common hosts
+Host *
+    HashKnownHosts yes
+    StrictHostKeyChecking yes
+    TCPKeepAlive yes
+    PasswordAuthentication no
+    IdentityFile ~/.credentials/common.key
