--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,13 @@
 Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233.* 45.113.234.* 45.113.235.*
-    HashKnownHosts no
-    StrictHostKeyChecking no
-    TCPKeepAlive yes
-    UserKnownHostsFile /dev/null
-    PasswordAuthentication no
-    CheckHostIP no
+	HashKnownHosts no
+	StrictHostKeyChecking no
+	TCPKeepAlive yes
+	UserKnownHostsFile /dev/null
+	PasswordAuthentication no
+	CheckHostIP no
+
+Host gitlab.com
+	IdentityFile ~/.credentials/gitlab.key
+
+Host github.com
+	IdentityFile ~/.credentials/github.key
