--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,10 @@
-# Disable strict cheking for NeCTAR, zones including: melbourne-qh2 (115.146.84.0/22) | melbourne-qh2-uom (45.113.232.0/22)
-Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233.* 45.113.234.* 45.113.235.*
+# Disable strict cheking for NeCTAR, zones including: melbourne-qh2 (115.146.84.0/22) | melbourne-qh2-uom (45.113.232.0/22, 115.146.92.0/22)
+Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233.* 45.113.234.* 45.113.235.* 115.146.92.* 115.146.93.* 115.146.94.* 115.146.95.*
     HashKnownHosts no
-    StrictHostKeyChecking no
-    UserKnownHostsFile /dev/null
     CheckHostIP no
+    UserKnownHostsFile /dev/null
+    IdentityFile ~/.credentials/nectar.key
+    User ubuntu
 
 # Use gitlab specific key
 Host gitlab.com
@@ -18,7 +19,9 @@ Host github.com
 # For all common hosts
 Host *
     HashKnownHosts yes
-    StrictHostKeyChecking yes
+    CheckHostIP yes
+    StrictHostKeyChecking no
     TCPKeepAlive yes
     PasswordAuthentication no
+    PubkeyAuthentication yes
     IdentityFile ~/.credentials/common.key
