--- a/.ssh/config
+++ b/.ssh/config
@@ -1,19 +1,16 @@
-# Disable strict cheking for NeCTAR, zones including: melbourne-qh2 (115.146.84.0/22) | melbourne-qh2-uom (45.113.232.0/22, 115.146.92.0/22)
-Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233.* 45.113.234.* 45.113.235.* 115.146.92.* 115.146.93.* 115.146.94.* 115.146.95.*
-    HashKnownHosts no
-    CheckHostIP no
-    UserKnownHostsFile /dev/null
-    IdentityFile ~/.credentials/nectar.key
-    User ubuntu
-
-# Use gitlab specific key
+# Use GitLab specific key
 Host gitlab.com
     IdentityFile ~/.credentials/gitlab.key
     TCPKeepAlive no
 
-# Use github specific key
+# Use GitHub specific key
 Host github.com
     IdentityFile ~/.credentials/github.key
+    TCPKeepAlive no
+
+# Use Azure Degv specific key
+Host ssh.dev.azure.com
+    IdentityFile ~/.credentials/azure-dev.key
     TCPKeepAlive no
 
 # For all common hosts
