--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,10 @@
 !/.gitignore
 !/.gitmodules
 !/.gitconfig
-!/.nanorc
 
 # directories
 !/.ssh
-!/.vscode
-!/.docker
+!/.subversion
 
 # submodules
 !/.nano
