--- a/.ssh/config
+++ b/.ssh/config
@@ -6,14 +6,19 @@ Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233
     IdentityFile ~/.credentials/nectar.key
     User ubuntu
 
-# Use gitlab specific key
+# Use GitLab specific key
 Host gitlab.com
     IdentityFile ~/.credentials/gitlab.key
     TCPKeepAlive no
 
-# Use github specific key
+# Use GitHub specific key
 Host github.com
     IdentityFile ~/.credentials/github.key
+    TCPKeepAlive no
+
+# Use GitLab UniMelb Engineering specific key
+Host github.com
+    IdentityFile ~/.credentials/gitlab.eng.unimelb.key
     TCPKeepAlive no
 
 # For all common hosts
