Update SSH config for Azure Dev

--- a/.ssh/config
+++ b/.ssh/config
@@ -16,6 +16,11 @@ Host github.com
     IdentityFile ~/.credentials/github.key
     TCPKeepAlive no
 
+# Use Azure Degv specific key
+Host ssh.dev.azure.com
+    IdentityFile ~/.credentials/azure-dev.key
+    TCPKeepAlive no
+
 # Use GitLab UniMelb Engineering specific key
 Host github.com
     IdentityFile ~/.credentials/gitlab.eng.unimelb.key
