--- a/.ssh/config
+++ b/.ssh/config
@@ -4,6 +4,7 @@ Host 115.146.84.* 115.146.85.* 115.146.86.* 115.146.87.* 45.113.232.* 45.113.233
     CheckHostIP no
     UserKnownHostsFile /dev/null
     IdentityFile ~/.credentials/nectar.key
+    IdentityFile ~/.credentials/kubernetes.key
     User ubuntu
 
 # Use GitLab specific key
