--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:scopatz/nanorc.git
 [submodule ".credentials"]
 	path = .credentials
-	url = git@gitlab.com:laitingsheng/credentials.git
+	url = git@github.com:laitingsheng/credentials.git
