--- a/.ssh/config
+++ b/.ssh/config
@@ -13,6 +13,10 @@ Host ssh.dev.azure.com
     IdentityFile ~/.credentials/azure-dev.key
     TCPKeepAlive no
 
+# Localhost only
+Host localhost
+    IdentityFile ~/.credentials/localhost.key
+
 # For all common hosts
 Host *
     HashKnownHosts yes
