--- a/.subversion/config
+++ b/.subversion/config
@@ -15,9 +15,8 @@
 ###   keychain             (Mac OS X)
 ###   windows-cryptoapi    (Windows)
 # password-stores = gpg-agent,gnome-keyring,kwallet
-password-stores = gpg-agent
 ### To disable all password stores, use an empty list:
-# password-stores =
+password-stores =
 ###
 ### Set KWallet wallet used by Subversion. If empty or unset,
 ### then the default network wallet will be used.
