--- a/.conan/conan.conf
+++ b/.conan/conan.conf
@@ -21,8 +21,8 @@ default_package_id_mode = semver_direct_mode # environment CONAN_DEFAULT_PACKAGE
 # bash_path = ""                      # environment CONAN_BASH_PATH (only windows)
 # read_only_cache = True              # environment CONAN_READ_ONLY_CACHE
 # cache_no_locks = True               # environment CONAN_CACHE_NO_LOCKS
-user_home_short = None                # environment CONAN_USER_HOME_SHORT
-use_always_short_paths = False        # environment CONAN_USE_ALWAYS_SHORT_PATHS
+# user_home_short = None              # environment CONAN_USER_HOME_SHORT
+# use_always_short_paths = False      # environment CONAN_USE_ALWAYS_SHORT_PATHS
 # skip_vs_projects_upgrade = False    # environment CONAN_SKIP_VS_PROJECTS_UPGRADE
 # non_interactive = False             # environment CONAN_NON_INTERACTIVE
 # skip_broken_symlinks_check = False  # environment CONAN_SKIP_BROKEN_SYMLINKS_CHECK
