--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".credentials"]
 	path = .credentials
 	url = git@github.com:laitingsheng/credentials.git
+[submodule ".scripts"]
+	path = .scripts
+	url = git@github.com:laitingsheng/Scripts.git
