--- a/.ssh/config
+++ b/.ssh/config
@@ -8,6 +8,11 @@ Host github.com
     IdentityFile ~/.credentials/github.key
     TCPKeepAlive no
 
+# Use GitHub UoA CS specific key
+Host github.com
+    IdentityFile ~/.credentials/github.cs.uoa.key
+    TCPKeepAlive no
+
 # Use Azure Degv specific key
 Host ssh.dev.azure.com
     IdentityFile ~/.credentials/azure-dev.key
