--- a/.ssh/config
+++ b/.ssh/config
@@ -13,6 +13,14 @@ Host ssh.dev.azure.com
     IdentityFile ~/.credentials/azure-dev.key
     TCPKeepAlive no
 
+# Use HPC specific key
+Host spartan.hpc.unimelb.edu.au phoenix.adelaide.edu.au
+    IdentityFile ~/.credentials/hpc.key
+
+# Use UoA Intranet specific key
+Host *.uoa.intra.tinson.io
+    IdentityFile ~/.credentials/uoa.key
+
 # Localhost only
 Host localhost
     IdentityFile ~/.credentials/localhost.key
@@ -23,6 +31,6 @@ Host *
     CheckHostIP yes
     StrictHostKeyChecking no
     TCPKeepAlive yes
-    PasswordAuthentication no
+    PasswordAuthentication yes
     PubkeyAuthentication yes
     IdentityFile ~/.credentials/common.key
