Update several files

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,15 +8,18 @@ Host github.com
     IdentityFile ~/.credentials/github.key
     TCPKeepAlive no
 
-# Use GitHub UoA CS specific key
-Host github.com
-    IdentityFile ~/.credentials/github.cs.uoa.key
-    TCPKeepAlive no
-
 # Use Azure Degv specific key
 Host ssh.dev.azure.com
     IdentityFile ~/.credentials/azure-dev.key
     TCPKeepAlive no
+
+# Use HPC specific key
+Host spartan.hpc.unimelb.edu.au phoenix.adelaide.edu.au
+    IdentityFile ~/.credentials/hpc.key
+
+# Use UoA Intranet specific key
+Host *.uoa.intra.tinson.io
+    IdentityFile ~/.credentials/uoa.key
 
 # Localhost only
 Host localhost
@@ -28,6 +31,6 @@ Host *
     CheckHostIP yes
     StrictHostKeyChecking no
     TCPKeepAlive yes
-    PasswordAuthentication no
+    PasswordAuthentication yes
     PubkeyAuthentication yes
     IdentityFile ~/.credentials/common.key
