Add Jupyter configuration to the repository

--- a/.ssh/config
+++ b/.ssh/config
@@ -18,7 +18,8 @@ Host spartan.hpc.unimelb.edu.au phoenix.adelaide.edu.au
     IdentityFile ~/.credentials/hpc.key
 
 # Use UoA Intranet specific key
-Host *.uoa.intra.tinson.io
+Host *.uoa.intra.tinson.io *.uoa.cloud
+    User a1812422
     IdentityFile ~/.credentials/uoa.key
 
 # Localhost only
