--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,4 @@
-root = true
-
-[*]
+[**]
 indent_style = space
 indent_size = 4
 charset = utf-8
@@ -8,8 +6,8 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
 
-[{Makefile,.gitmodules,.git/config}]
+[{**/Makefile,.gitmodules,.git/config}]
 indent_style = tab
 
-[*.{json,yaml,yml,xml,html,css,tex,bib}]
+[**/*.{json,yaml,yml,xml,html,css,tex,bib,scss,sass}]
 indent_size = 2
