Update scripts and files for macOS & Add GitHub CLI configurations

--- a/.gitignore
+++ b/.gitignore
@@ -10,20 +10,23 @@
 !/.nanorc
 !/.vimrc
 !/.clang-format
-!/.bashrc
+!/.clang-format.*
 !/.profile
+!/.bash_profile
 !/.bash_logout
 !/.condarc
 
 # directories
+!/.bashrcs
 !/.config
+!/.envs
 !/.ssh
 !/.subversion
 !/.conan
 !/.scripts
-!/.dependabot
 !/.docker
 !/.jupyter
+!/.github
 
 # submodules
 !/.nano
