--- a/.gitconfig
+++ b/.gitconfig
@@ -1,39 +1,45 @@
 [user]
-    name = Tinson Lai
-    email = laitingsheng@hotmail.com
-[include]
-    path = ~/.credentials/signkey.gitconfig
+	name = Tinson Lai
+	email = laitingsheng@hotmail.com
+[init]
+	defaultBranch = main
 [commit]
-    gpgsign = true
+	gpgsign = true
 [tag]
-    forceSignAnnotated = true
-    gpgSign = true
+	forceSignAnnotated = true
+	gpgSign = true
 [core]
-    eol = lf
-    autocrlf = false
-    safecrlf = false
-    ignoreCase = false
-    symlinks = true
-    filemode = true
-    longpaths = true
+	eol = lf
+	autocrlf = false
+	safecrlf = false
+	ignoreCase = false
+	symlinks = true
+	longpaths = true
 [tar]
-    umask = 0022
+	umask = 0022
 [push]
-    default = current
-    followTags = true
-    gpgSign = if-asked
+	default = current
+	followTags = true
+	gpgSign = if-asked
 [pull]
-    rebase = merges
+	rebase = merges
 [merge]
-    directoryRenames = true
-    renormalize = true
+	directoryRenames = true
+	renormalize = true
 [diff]
-    renames = copies
+	renames = copies
 [fetch]
-    prune = true
-    pruneTags = true
-    recurseSubmodules = true
+	prune = true
+	pruneTags = true
+	recurseSubmodules = true
 [color]
-    ui = always
+	ui = always
 [column]
-    ui = auto
+	ui = auto
+[include]
+	path = ~/.credentials/system.gitconfig
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
