Update multiple configurations for network access

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,85 @@
+[submodule ".credentials"]
+	path = .credentials
+	url = ../Credentials.git
+	branch = main
+[submodule ".secrets"]
+	path = .secrets
+	url = ../Secrets.git
+	branch = main
+[submodule "git/plugins/system-utils"]
+	path = git/plugins/system-utils
+	url = ../system-utils-plugin.git
+	branch = main
+[submodule "git/Pages"]
+	path = git/Pages
+	url = ../laitingsheng.github.io.git
+	branch = main
+[submodule "git/Scripts"]
+	path = git/Scripts
+	url = ../Scripts.git
+	branch = main
 [submodule ".nano"]
 	path = .nano
 	url = git@github.com:scopatz/nanorc.git
-[submodule ".credentials"]
-	path = .credentials
-	url = git@github.com:laitingsheng/credentials.git
-[submodule ".scripts"]
-	path = .scripts
-	url = git@github.com:laitingsheng/Scripts.git
+	branch = master
+	ignore = dirty
 [submodule ".gitignores"]
 	path = .gitignores
 	url = git@github.com:github/gitignore.git
+	branch = master
+	ignore = dirty
 [submodule ".vim_runtime"]
 	path = .vim_runtime
-	url = https://github.com/amix/vimrc.git
+	url = git@github.com:amix/vimrc.git
+	branch = master
+	ignore = dirty
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/syntax-highlighting"]
 	path = .zsh/syntax-highlighting
 	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/history-substring-search"]
 	path = .zsh/history-substring-search
 	url = git@github.com:zsh-users/zsh-history-substring-search.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/autosuggestions"]
 	path = .zsh/autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/completions"]
 	path = .zsh/completions
 	url = git@github.com:zsh-users/zsh-completions.git
+	branch = master
+	ignore = dirty
 [submodule ".oh-my-bash"]
 	path = .oh-my-bash
 	url = git@github.com:ohmybash/oh-my-bash.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/conda-completion"]
 	path = .zsh/conda-completion
 	url = git@github.com:esc/conda-zsh-completion.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/powerlevel10k"]
 	path = .zsh/powerlevel10k
 	url = git@github.com:romkatv/powerlevel10k.git
-[submodule ".plugins/system-utils"]
-	path = .plugins/system-utils
-	url = git@github.com:laitingsheng/system-utils-plugin.git
-[submodule "leetcode"]
-	path = leetcode
-	url = git@github.com:laitingsheng/LeetCode.git
-[submodule "pages"]
-	path = pages
-	url = git@github.com:laitingsheng/laitingsheng.github.io.git
+	branch = master
+	ignore = dirty
 [submodule ".zsh/k"]
 	path = .zsh/k
 	url = git@github.com:supercrabtree/k.git
+	branch = master
+	ignore = dirty
+[submodule ".oh-my-posh"]
+	path = .oh-my-posh
+	url = git@github.com:JanDeDobbeleer/oh-my-posh.git
+	branch = main
+	ignore = dirty
