--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,11 @@
 [**]
-indent_style = space
-indent_size = 4
+root = true
+indent_style = tab
+tab_width = 4
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-end_of_line = lf
 
-[{**/Makefile,.gitmodules,.git/config}]
-indent_style = tab
-
-[**/*.{json,yaml,yml,xml,html,css,tex,bib,scss,sass}]
-indent_size = 2
+[**.{json,yaml,yml,xml,html,css,tex,bib,scss,sass}]
+tab_width = 2
