--- a/.ssh/config
+++ b/.ssh/config
@@ -1,28 +1,1 @@
-# Use GitLab specific key
-Host gitlab.com
-    IdentityFile ~/.credentials/gitlab.key
-    TCPKeepAlive no
-
-# Use GitHub specific key
-Host github.com
-    IdentityFile ~/.credentials/github.key
-    TCPKeepAlive no
-
-# Use Azure Degv specific key
-Host ssh.dev.azure.com
-    IdentityFile ~/.credentials/azure-dev.key
-    TCPKeepAlive no
-
-# Localhost only
-Host localhost
-    IdentityFile ~/.credentials/localhost.key
-
-# For all common hosts
-Host *
-    HashKnownHosts yes
-    CheckHostIP yes
-    StrictHostKeyChecking no
-    TCPKeepAlive yes
-    PasswordAuthentication yes
-    PubkeyAuthentication yes
-    IdentityFile ~/.credentials/common.key
+../.credentials/.ssh/config
