--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,96 @@
+[submodule ".credentials"]
+	path = .credentials
+	url = ../credentials.git
+[submodule "git/plugins/system-utils"]
+	path = git/plugins/system-utils
+	url = ../system-utils-plugin.git
+[submodule "git/Pages"]
+	path = git/Pages
+	url = ../laitingsheng.github.io.git
+[submodule "git/Scripts"]
+	path = git/Scripts
+	url = ../Scripts.git
 [submodule ".nano"]
 	path = .nano
 	url = git@github.com:scopatz/nanorc.git
-[submodule ".credentials"]
-	path = .credentials
-	url = git@github.com:laitingsheng/credentials.git
-[submodule ".scripts"]
-	path = .scripts
-	url = git@github.com:laitingsheng/Scripts.git
+	ignore = dirty
 [submodule ".gitignores"]
 	path = .gitignores
 	url = git@github.com:github/gitignore.git
+	ignore = dirty
 [submodule ".vim_runtime"]
 	path = .vim_runtime
 	url = https://github.com/amix/vimrc.git
+	ignore = dirty
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
+	ignore = dirty
 [submodule ".zsh/syntax-highlighting"]
 	path = .zsh/syntax-highlighting
 	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+	ignore = dirty
 [submodule ".zsh/history-substring-search"]
 	path = .zsh/history-substring-search
 	url = git@github.com:zsh-users/zsh-history-substring-search.git
+	ignore = dirty
 [submodule ".zsh/autosuggestions"]
 	path = .zsh/autosuggestions
 	url = git@github.com:zsh-users/zsh-autosuggestions.git
+	ignore = dirty
 [submodule ".zsh/completions"]
 	path = .zsh/completions
 	url = git@github.com:zsh-users/zsh-completions.git
+	ignore = dirty
 [submodule ".oh-my-bash"]
 	path = .oh-my-bash
 	url = git@github.com:ohmybash/oh-my-bash.git
+	ignore = dirty
 [submodule ".zsh/conda-completion"]
 	path = .zsh/conda-completion
 	url = git@github.com:esc/conda-zsh-completion.git
+	ignore = dirty
 [submodule ".zsh/powerlevel10k"]
 	path = .zsh/powerlevel10k
 	url = git@github.com:romkatv/powerlevel10k.git
-[submodule ".plugins/system-utils"]
-	path = .plugins/system-utils
-	url = git@github.com:laitingsheng/system-utils-plugin.git
-[submodule "leetcode"]
-	path = leetcode
-	url = git@github.com:laitingsheng/LeetCode.git
-[submodule "pages"]
-	path = pages
-	url = git@github.com:laitingsheng/laitingsheng.github.io.git
+	ignore = dirty
 [submodule ".zsh/k"]
 	path = .zsh/k
 	url = git@github.com:supercrabtree/k.git
+	ignore = dirty
+[submodule "git/public/boost"]
+	path = git/public/boost
+	url = git@github.com:boostorg/boost.git
+	ignore = dirty
+[submodule "git/public/abseil/cpp"]
+	path = git/public/abseil/cpp
+	url = git@github.com:abseil/abseil-cpp.git
+	ignore = dirty
+[submodule "git/public/abseil/python"]
+	path = git/public/abseil/python
+	url = git@github.com:abseil/abseil-py.git
+	ignore = dirty
+[submodule "git/public/facebook/folly"]
+	path = git/public/facebook/folly
+	url = git@github.com:facebook/folly.git
+	ignore = dirty
+[submodule "git/public/fmtlib/fmt"]
+	path = git/public/fmtlib/fmt
+	url = git@github.com:fmtlib/fmt.git
+	ignore = dirty
+[submodule "git/public/electronicarts/EASTL"]
+	path = git/public/electronicarts/EASTL
+	url = git@github.com:electronicarts/EASTL.git
+	ignore = dirty
+[submodule "git/public/other/sol2"]
+	path = git/public/other/sol2
+	url = git@github.com:ThePhD/sol2.git
+	ignore = dirty
+[submodule "git/public/sogou/workflow"]
+	path = git/public/sogou/workflow
+	url = git@github.com:sogou/workflow.git
+	ignore = dirty
+[submodule "git/public/JetBrains/compose-jb"]
+	path = git/public/JetBrains/compose-jb
+	url = git@github.com:JetBrains/compose-jb.git
+	ignore = dirty
