--- a/.ssh/config
+++ b/.ssh/config
@@ -1,11 +1,16 @@
+# Use GitHub specific key
+Host github.com
+    IdentityFile ~/.credentials/github.key
+    TCPKeepAlive no
+
 # Use GitLab specific key
 Host gitlab.com
     IdentityFile ~/.credentials/gitlab.key
     TCPKeepAlive no
 
-# Use GitHub specific key
-Host github.com
-    IdentityFile ~/.credentials/github.key
+# Use Gitee specific key
+Host gitee.com
+    IdentityFile ~/.credentials/gitee.key
     TCPKeepAlive no
 
 # Use Azure Degv specific key
@@ -16,6 +21,14 @@ Host ssh.dev.azure.com
 # Localhost only
 Host localhost
     IdentityFile ~/.credentials/localhost.key
+
+Host dgx1
+    HostName 10.13.11.69
+    User xianjin
+    IdentityFile ~/.credentials/intranet.key
+
+Host router.asus.com 10.*.*.* 192.168.*.*
+    IdentityFile ~/.credentials/intranet.key
 
 # For all common hosts
 Host *
