Update multiple submodules

--- a/.ssh/config
+++ b/.ssh/config
@@ -17,6 +17,10 @@ Host ssh.dev.azure.com
 Host localhost
     IdentityFile ~/.credentials/localhost.key
 
+Host dgx1
+    HostName 10.13.11.69
+    User xianjin
+
 # For all common hosts
 Host *
     HashKnownHosts yes
