--- a/.config/pip/pip.conf
+++ b/.config/pip/pip.conf
@@ -1,5 +1,2 @@
 [global]
-index-url = https://mirrors.aliyun.com/pypi/simple/
-
-[install]
-trusted-host=mirrors.aliyun.com
+index-url = https://pypi.tuna.tsinghua.edu.cn/simple
