--- a/.gitconfig
+++ b/.gitconfig
@@ -38,6 +38,10 @@
 	ui = auto
 [include]
 	path = ~/.credentials/system.gitconfig
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
+[url "ssh://git@gitlab.com/"]
+	insteadOf = https://gitlab.com/
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
