--- a/.editorconfig
+++ b/.editorconfig
@@ -8,13 +8,13 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,tex,html,xml,css,md}]
+[*.{json,tex,html,xml,css}]
 tab_width = 2
 
-[*.{yaml,yml,py,pyx}]
+[*.{yaml,yml,py,pyx,md}]
 indent_style = space
 
-[*.{yaml,yml}]
+[*.{yaml,yml,md}]
 indent_size = 2
 
 [*.{py,pyx}]
