--- a/.condarc
+++ b/.condarc
@@ -3,17 +3,17 @@ channels:
   - defaults
 show_channel_urls: true
 default_channels:
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/r
-  - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/msys2
+  - https://mirrors.aliyun.com/anaconda/pkgs/main
+  - https://mirrors.aliyun.com/anaconda/pkgs/r
+  - https://mirrors.aliyun.com/anaconda/pkgs/msys2
 custom_channels:
-  conda-forge: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  msys2: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  bioconda: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  menpo: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  pytorch: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  pytorch-lts: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  simpleitk: https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
-  Paddle: http://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud
+  conda-forge: https://mirrors.aliyun.com/anaconda/cloud
+  msys2: https://mirrors.aliyun.com/anaconda/cloud
+  bioconda: https://mirrors.aliyun.com/anaconda/cloud
+  menpo: https://mirrors.aliyun.com/anaconda/cloud
+  pytorch: https://mirrors.aliyun.com/anaconda/cloud
+  pytorch-lts: https://mirrors.aliyun.com/anaconda/cloud
+  simpleitk: https://mirrors.aliyun.com/anaconda/cloud
+  Paddle: http://mirrors.aliyun.com/anaconda/cloud
 env_prompt: ({name})
 report_errors: true
